--- a/backend/weather-api/src/main/resources/static/index.html
+++ b/backend/weather-api/src/main/resources/static/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple Weather App</title>
-    <link rel="stylesheet" href="styles.css" />
+      <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌤️</text></svg>">
+      <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
